# rial_extracao_f1

./: README.md  database.py  docker-compose.yml  index.html  init_db.py  mkdocs.yml  models.py  pyproject.toml  requirements.txt  teste.py
docs/: criando_o_banco.md  docker.md  index.md
site/: 404.html
site/criando_o_banco/: index.html
site/docker/: index.html
site/search/: search_index.json
